Web Inspector: stack trace is cut at native bind if inspector is closed https://bugs.webkit.org/show_bug.cgi?id=109427

Reviewed by Pavel Feldman.

Source/WebCore:

Only top frame is collected instead of full stack trace when inspector
front-end is closed to avoid expensive operations when exceptions are
thrown.

Test: http/tests/inspector-enabled/console-exception-while-no-inspector.html

* inspector/InspectorConsoleAgent.cpp:
(WebCore::InspectorConsoleAgent::addMessageToConsole):

LayoutTests:

Test that stack trace for uncaught exceptions is collected when inspector
front-end is closed.

* http/tests/inspector-enabled/console-exception-while-no-inspector-expected.txt: Added.
* http/tests/inspector-enabled/console-exception-while-no-inspector.html: Added.
* platform/chromium/http/tests/inspector-enabled/console-exception-while-no-inspector-expected.txt: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@142594 bbb929c8-8fbe-4397-9dbb-9b2b20218538